--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id 'fabric-loom' version '1.2.7'
     id 'maven-publish'
+    id 'java-library'
 }
 
 /*
@@ -16,30 +16,39 @@ def getGitCommit = { ->
     return stdout.toString().trim()
 }
 
-archivesBaseName = project.archives_base_name
-version = project.mod_version + "+fabric." + getGitCommit()
-group = project.maven_group
-
-dependencies {
-    //to change the versions see the gradle.properties file
-    minecraft "com.mojang:minecraft:${project.minecraft_version}"
-    //mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-    mappings loom.officialMojangMappings()
-    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-
-    // Fabric API. This is technically optional, but you probably want it anyway.
-    //modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-
-    // PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
-    // You may need to force-disable transitiveness on them.
+repositories {
+    mavenCentral()
+    maven {
+        name = "cafestubeRepository"
+        url = uri("https://repo.cafestu.be/repository/maven/")
+        credentials PasswordCredentials.class
+    }
+    maven {
+        url = "https://libraries.minecraft.net"
+    }
 }
 
-processResources {
-    inputs.property "version", project.version
 
-    filesMatching("fabric.mod.json") {
-        expand "version": project.version
-    }
+dependencies {
+    // https://mvnrepository.com/artifact/net.kyori/adventure-api
+    api("net.kyori:adventure-api:4.14.0")
+    api("com.google.code.gson:gson:2.10.1")
+    // https://mvnrepository.com/artifact/it.unimi.dsi/fastutil
+    api("it.unimi.dsi:fastutil:8.5.12")
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
+    api("org.slf4j:slf4j-api:2.0.9")
+    // https://mvnrepository.com/artifact/com.google.guava/guava
+    api("com.google.guava:guava:32.1.3-jre")
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+    api("org.apache.commons:commons-lang3:3.14.0")
+    api("com.mojang:datafixerupper:6.0.8")
+    // https://mvnrepository.com/artifact/net.kyori/adventure-text-serializer-gson
+    api("net.kyori:adventure-text-serializer-gson:4.14.0")
+    api("io.github.jglrxavpok.hephaistos:common:2.5.3")
+
+    // https://mvnrepository.com/artifact/org.jetbrains.kotlin/kotlin-stdlib-common
+    api("org.jetbrains.kotlin:kotlin-stdlib-common:1.9.21")
+
 }
 
 // ensure that the encoding is set to UTF-8, no matter what the system default is
@@ -47,10 +56,6 @@ processResources {
 // see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
-}
-
-loom {
-    accessWidenerPath = file("src/main/resources/dataconverter.accesswidener")
 }
 
 // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
@@ -65,33 +70,9 @@ java {
     sourceCompatibility = JavaVersion.VERSION_17
     targetCompatibility = JavaVersion.VERSION_17
 }
+
 jar {
     from "LICENSE"
 }
 
-// make build reproducible
-tasks.withType(AbstractArchiveTask) {
-    preserveFileTimestamps = false
-    reproducibleFileOrder = true
-}
 
-// configure the maven publication
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            // add all the jars that should be included when publishing to maven
-            artifact(remapJar) {
-                builtBy remapJar
-            }
-            artifact(sourcesJar) {
-                builtBy remapSourcesJar
-            }
-        }
-    }
-
-    // select the repositories you want to publish to
-    repositories {
-        // uncomment to publish to the local maven
-        // mavenLocal()
-    }
-}
