--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ repositories {
     }
 }
 
+version = getGitCommit() + "-SNAPSHOT"
+group = "eu.cafestube.data"
 
 dependencies {
     // https://mvnrepository.com/artifact/net.kyori/adventure-api
@@ -69,6 +71,23 @@ java {
 
     sourceCompatibility = JavaVersion.VERSION_17
     targetCompatibility = JavaVersion.VERSION_17
+}
+
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            artifactId = "externaldataconverter"
+            from components.java
+        }
+    }
+    repositories {
+        maven {
+            name = "cafestubeRepository"
+            credentials PasswordCredentials.class
+            url = uri("https://repo.cafestu.be/repository/maven-public-snapshots/")
+        }
+    }
 }
 
 jar {
