--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     // https://mvnrepository.com/artifact/net.kyori/adventure-text-serializer-gson
     api("net.kyori:adventure-text-serializer-gson:4.14.0")
     api("io.github.jglrxavpok.hephaistos:common:2.5.3")
+    api("com.mojang:brigadier:1.2.9")
 
     // https://mvnrepository.com/artifact/org.jetbrains.kotlin/kotlin-stdlib-common
     api("org.jetbrains.kotlin:kotlin-stdlib-common:1.9.21")
